1. 拆分 snapshot meta 数据持久化的逻辑为三个节点(FetchSnapshots.java, PersistSnapMeta.java, DeleteSnapMeta.java)